--- a/package.json
+++ b/package.json
@@ -1,37 +1,64 @@
 {
-  "name": "disktop-releve-navigation",
+  "name": "disktop-class",
   "version": "0.0.0",
+  "main": "./dist/main.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "pi": "electron-builder install-app-deps",
+    "i-electron": "npm i electron --ia32 -D",
+    "i": "npm i sqlite3 && npm i electron-builder && npm run postinstall",
+    "mode-developpement": "------------------------------------------------------------------",
+    "ets": "set ELECTRON_ENV=0 && electron --require ts-node/register ./main.ts",
+    "ejs": "set ELECTRON_ENV=0 && electron main.js",
+    "build-watch": "ng build --extractCss --watch --base-href ./",
+    "electron:serve": "npm run ets && nodemon --watch ./main.ts --exec \"npm run ets\"",
+    "s": "electron ./portable8-win32-x64/resources/app/main.js",
+    "dev": "concurrently \"ng serve\" \"npm run ets\"",
+    "mode-production": "---------------------------------------------------------------------",
+    "angular-dist": "electron --require ts-node/register ./main.ts",
+    "angular-prod": "ng build --prod --base-href ./",
+    "electron-prod": "tsc  --project ./tsconfig.electron.json",
+    "prod3": "npm run angular-prod && npm run electron-prod && electron ./electron/main.js",
+    "prod-a-e": "npm run angular-prod && npm run electron-prod",
+    "prod2": "npm run angular-prod && npm run electron-prod",
+    "build": "node --require ts-node/register builderAPI.ts",
+    "pkg": "electron-packager electron-js portable5",
+    "prod": "npm run prod-a-e && npm run build",
+    "t": "echo \"Error: no test specified\" && exit 1",
+    "git-rm": "git init && git remote add origin https://github.com/djm2x/stock.git",
+    "git": "git add . && git commit -m 1 && git push -u origin master"
   },
   "private": true,
+  "optionalDependencies": {},
   "dependencies": {
-    "@angular/animations": "~8.0.1",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/core": "~8.0.1",
-    "@angular/forms": "~8.0.1",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/router": "~8.0.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "typeorm": "^0.2.18",
+    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.3",
-    "@angular/compiler-cli": "~8.0.1",
-    "@angular/language-service": "~8.0.1",
-    "@types/node": "~8.9.4",
+    "@angular/animations": "~8.1.0",
+    "@angular/cdk": "~8.1.0",
+    "@angular/cli": "~8.1.0",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "@angular/core": "~8.1.0",
+    "@angular/forms": "~8.1.0",
+    "@angular/language-service": "~8.1.0",
+    "@angular/material": "^8.1.0",
+    "@angular/material-moment-adapter": "^8.1.0",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/router": "~8.1.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/nodemailer": "^6.2.0",
+    "bootstrap-css-only": "^4.3.1",
     "codelyzer": "^5.0.0",
+    "concurrently": "^4.1.2",
+    "electron": "^5.0.7",
+    "electron-builder": "^20.44.4",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -39,9 +66,14 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "moment": "^2.24.0",
+    "ngx-toastr": "^10.0.4",
     "protractor": "~5.4.0",
+    "rxjs": "~6.4.0",
     "ts-node": "~7.0.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   }
 }
