--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,32 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "module": "commonjs",
     "declaration": false,
+    "moduleResolution": "node",
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es5",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2018",
-      "dom"
-    ]
+      "es2017",
+         "es2016",
+         "es2015",
+         "dom",
+         "es5",
+         "es6"
+    ],
+    "types": [
+      "node"
+    ],
   }
 }
